# axum-vben-admin

./: README.md  dump-rust-admin-202503172332.sql
rust-admin-api/: .env.example  .gitignore  Cargo.toml
rust-admin-api/redis-r2d2/: Cargo.toml
rust-admin-api/redis-r2d2/src/: lib.rs
rust-admin-api/res/: Cargo.toml
rust-admin-api/res/src/: lib.rs
rust-admin-api/s-derive/: Cargo.toml
rust-admin-api/s-derive/src/: lib.rs  sea.rs
rust-admin-api/s-derive/src/table/: mod.rs
rust-admin-api/s-orm/: Cargo.toml
rust-admin-api/s-orm/src/pool/: pool.rs
rust-admin-api/src/: app_state.rs  lib.rs  main.rs
rust-admin-api/src/common/: error.rs  mod.rs  r.rs
rust-admin-api/src/controller/admin/system/: admin_log.rs  api.rs  auth.rs  config.rs  data_dictionary.rs  index.rs  menu.rs  mod.rs  role.rs  user.rs
rust-admin-api/src/entity/: mod.rs  system_admin_log.rs  system_api.rs  system_config.rs  system_data_dictionary_config.rs  system_data_disctionary.rs  system_menu.rs  system_role.rs  system_role_api.rs  system_role_menu.rs  system_user.rs  system_user_role.rs
rust-admin-api/src/middleware/: login_auth.rs  mod.rs  priority_auth.rs  request_logger.rs
rust-admin-api/src/router/: auth.rs  mod.rs  system.rs
rust-admin-api/src/service/: admin_log.rs  api.rs  claims.rs  config.rs  data_dictionary.rs  data_dictionary_config.rs  ip.rs  jwt.rs  menu.rs  mod.rs  query.rs  role.rs  user.rs
rust-admin-api/src/types/: admin_log.rs  api.rs  config.rs  data_dictionary.rs  mod.rs  page.rs  user.rs
vben-admin/: package.json  pnpm-lock.yaml  vben-admin.code-workspace
vben-admin/apps/backend-mock/api/menu/: list.ts
vben-admin/apps/backend-mock/routes/: [...].ts
vben-admin/apps/backend-mock/utils/: mock-data.ts
vben-admin/apps/web-antd/: .env  package.json  vite.config.mts
vben-admin/apps/web-antd/src/: preferences.ts
vben-admin/apps/web-antd/src/api/: request.ts
vben-admin/apps/web-antd/src/api/core/: index.ts
vben-admin/apps/web-antd/src/api/core/system/: admin_log.ts  api.ts  auth.ts  config.ts  data_dictionary.ts  data_dictionary_config.ts  menu.ts  role.ts  user.ts
vben-admin/apps/web-antd/src/components/common/: utcDataFromTime.vue
vben-admin/apps/web-antd/src/components/system/: ConfigDataDictionary.vue  DataDisctionaryTable.vue  authority.vue  editApi.vue  editConfig.vue  editDataDictionary.vue  editDataDictionaryConfig.vue  editMenu.vue  editRole.vue  editUser.vue
vben-admin/apps/web-antd/src/layouts/: basic.vue
vben-admin/apps/web-antd/src/locales/langs/zh-CN/: page.json
vben-admin/apps/web-antd/src/router/: access.ts
vben-admin/apps/web-antd/src/router/routes/modules/: dashboard.ts  system.ts  vben.ts
vben-admin/apps/web-antd/src/store/: auth.ts
vben-admin/apps/web-antd/src/views/_core/authentication/: login.vue
vben-admin/apps/web-antd/src/views/system/apis/: index.vue
vben-admin/apps/web-antd/src/views/system/config/: index.vue
vben-admin/apps/web-antd/src/views/system/data-dictionary/: index.vue
vben-admin/apps/web-antd/src/views/system/log/: index.vue
vben-admin/apps/web-antd/src/views/system/menus/: index.vue
vben-admin/apps/web-antd/src/views/system/roles/: index.vue
vben-admin/apps/web-antd/src/views/system/user/: index.vue
vben-admin/docs/src/en/guide/essentials/: settings.md
