[package]
name = "res"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true }
diesel = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = {workspace = true}
dotenv = {workspace = true}
tera = {workspace = true}
#sqlx = {workspace = true}
anyhow = {workspace = true}
r2d2 = {workspace = true}