[package]
name = "s-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, default-features = false, features = [
    "full",
    "derive",
    "clone-impls",
    "parsing",
    "proc-macro",
    "printing",
    "extra-traits",
] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
heck = {workspace = true}
[features]
default = ["sea"]
sea = []